[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Obstaculos/tnt2.png" type="Texture" id=1]
[ext_resource path="res://Obstaculos/tnt.gd" type="Script" id=2]
[ext_resource path="res://assets/Obstaculos/explosion/explosion3.png" type="Texture" id=3]
[ext_resource path="res://assets/Obstaculos/explosion/explosion1.png" type="Texture" id=4]
[ext_resource path="res://assets/Obstaculos/explosion/explosion2.png" type="Texture" id=5]
[ext_resource path="res://assets/Obstaculos/explosion/explosion7.png" type="Texture" id=6]
[ext_resource path="res://assets/Obstaculos/explosion/explosion8.png" type="Texture" id=7]
[ext_resource path="res://assets/Obstaculos/explosion/explosion6.png" type="Texture" id=8]
[ext_resource path="res://assets/Obstaculos/explosion/explosion5.png" type="Texture" id=9]
[ext_resource path="res://assets/Obstaculos/explosion/explosion4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "explosion",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "sin_explotar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5248, 21.752 )

[node name="tnt" type="Area2D"]
pause_mode = 1
position = Vector2( 1083.7, 519.787 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_horizontal_guides_": [ 4.0 ]
}

[node name="tnt" type="AnimatedSprite" parent="."]
position = Vector2( 0.0371094, 6.63965 )
scale = Vector2( 0.146894, 0.15013 )
frames = SubResource( 1 )
animation = "sin_explotar"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.172611, 0.872894 )
shape = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_tnt_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_tnt_area_exited"]
[connection signal="choco" from="." to="." method="_on_tnt_choco"]
